main/default/objects/Payment_Detail__c/fields/Card_Holder_Name__c.field-meta.xml
<CustomField>
    <fullName>Card_Holder_Name__c</fullName>
    <label>Card Holder Name</label>
    <length>175</length>
    <type>Text</type>
</CustomField>