main/default/objects/Payment_Detail__c/fields/Credit_Card_Fees__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Fees__c</fullName>
    <label>Credit Card Fees</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>