main/default/objects/Payment_Detail__c/fields/Payment_Instrument_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Instrument_Type__c</fullName>
    <label>Payment Instrument Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>