main/default/objects/Payment_Detail__c/fields/Processor_Response_Type__c.field-meta.xml
<CustomField>
    <fullName>Processor_Response_Type__c</fullName>
    <label>Processor Response Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>