main/default/objects/Payment_Detail__c/fields/Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Transaction_ID__c</fullName>
    <label>Transaction ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>